# herokuapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  mathgen.py  model.py  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  services.py
app/static/: styles.css
app/templates/: base.html  change_password.html  image.html  index.html  login.html  math.html
static/: lazyload.css
templates/: formtest.html  index.html  login.html  math.html
