[project]
name = "herokuapp"
version = "0.1.0"
description = "Modernised comic viewer and utility app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "flask>=3.1.0",
  "gunicorn>=23.0.0",
  "lxml>=5.3.0",
  "psycopg2-binary>=2.9.10",
  "requests>=2.32.3",
  "whitenoise>=6.9.0",
]

[tool.uv]
dev-dependencies = []
